# ocrfeeder

./: .gitignore  AUTHORS  MANIFEST.in  Makefile  Makefile.am  NEWS  README  TRANSLATORS  autogen.sh  configure.ac  ocrfeeder  ocrfeeder-cli  ocrfeeder.doap  requirements.txt  setup.py
debian/: changelog  control  copyright  rules
engines/: gocr.xml  ocrad.xml  tesseract.xml
feeder/: documentGeneration.py  imageManipulation.py  layoutAnalysis.py  ocrEngines.py
help/: Makefile.am
help/C/: addingfolder.page  addingimage.page  automaticrecognition.page  deskewing.page  documentgeneration.page  finetuning.page  importingfromscanner.page  importingpdf.page  index.page  manualeditionandcorrection.page  ocrconfiguration.page  projects.page  unpaper.page
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: uk.po
locale/de/LC_MESSAGES/: ocrfeeder.mo
locale/es/LC_MESSAGES/: ocrfeeder.mo
locale/fr/LC_MESSAGES/: ocrfeeder.mo
locale/gl/LC_MESSAGES/: ocrfeeder.mo
locale/it/LC_MESSAGES/: ocrfeeder.mo
locale/pt/LC_MESSAGES/: ocrfeeder.mo
locale/sv/LC_MESSAGES/: ocrfeeder.mo
locale/zh_CN/LC_MESSAGES/: ocrfeeder.mo
m4/: m4_ax_python_module.m4
odf/: namespaces.py  office.py  opendocument.py  thumbnail.py
po/: LINGUAS  POTFILES.in  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fr.po  gl.po  he.po  hi.po  hu.po  id.po  ie.po  it.po  ka.po  nb.po  nl.po  ocrfeeder.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
resources/: Makefile.am  menubar.ui  ocrfeeder-cli.1  ocrfeeder.1  ocrfeeder.appdata.xml.in  ocrfeeder.desktop  ocrfeeder.desktop.in  org.gnome.OCRFeeder.appdata.xml.in  org.gnome.OCRFeeder.desktop.in  spell-checker.ui
resources/icons/: Makefile.am
src/: Makefile.am
src/ocrfeeder/: Makefile.am
src/ocrfeeder/feeder/: Makefile.am  documentGeneration.py  imageManipulation.py  layoutAnalysis.py  ocrEngines.py
src/ocrfeeder/odf/: Makefile.am  anim.py  attrconverters.py  chart.py  config.py  dc.py  dr3d.py  draw.py  element.py  form.py  grammar.py  load.py  manifest.py  math.py  meta.py  namespaces.py  number.py  odf2xhtml.py  odfmanifest.py  office.py  ooostyles.py  opendocument.py  presentation.py  script.py  style.py  svg.py  table.py  text.py  userfield.py  xforms.py
src/ocrfeeder/studio/: Makefile.am  boxesarea.py  configuration.py  customWidgets.py  dataHolder.py  pagesiconview.py  project.py  studioBuilder.py  widgetModeler.py  widgetPresenter.py
src/ocrfeeder/util/: Makefile.am  __init__.py  asyncworker.py  cliutils.py  configuration.py  constants.py  constants.py.in  graphics.py  lib.py  log.py
studio/: configuration.py  customWidgets.py  dataHolder.py  studioBuilder.py  widgetModeler.py  widgetPresenter.py
util/: asyncworker.py  cliutils.py  constants.py  graphics.py  lib.py
