include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = ocrfeeder

DOC_FIGURES = \
	figures/areas-edition.png \
	figures/content-areas.png

DOC_PAGES = \
	addingfolder.page \
	addingimage.page \
	automaticrecognition.page \
	deskewing.page \
	documentgeneration.page \
	finetuning.page \
	importingfromscanner.page \
	importingpdf.page \
	index.page \
	legal.xml \
	manualeditionandcorrection.page \
	ocrconfiguration.page \
	projects.page \
	unpaper.page

DOC_LINGUAS = cs de gl es fr ru sl uk

dist-hook: doc-dist-hook
