@YELP_HELP_RULES@

HELP_ID = ocrfeeder

HELP_MEDIA = \
	figures/areas-edition.png \
	figures/content-areas.png

HELP_FILES = \
	addingfolder.page \
	addingimage.page \
	automaticrecognition.page \
	deskewing.page \
	documentgeneration.page \
	finetuning.page \
	importingfromscanner.page \
	importingpdf.page \
	index.page \
	legal.xml \
	manualeditionandcorrection.page \
	ocrconfiguration.page \
	projects.page \
	unpaper.page

HELP_LINGUAS = cs de el es fr gl hu ru sl sv uk
