ocrfeeder_odfdir = $(pkgpythondir)/odf/

ocrfeeder_odf_PYTHON = \
	__init__.py \
	anim.py \
	attrconverters.py \
	chart.py \
	config.py \
	dc.py \
	dr3d.py \
	draw.py \
	element.py \
	form.py \
	grammar.py \
	load.py \
	manifest.py \
	math.py \
	meta.py \
	namespaces.py \
	number.py \
	odf2xhtml.py \
	odfmanifest.py \
	office.py \
	ooostyles.py \
	opendocument.py \
	presentation.py \
	script.py \
	style.py \
	svg.py \
	table.py \
	text.py \
	thumbnail.py \
	userfield.py \
	xforms.py

clean-local:
	rm -rf *.pyc *.pyo